figured out dark mode issue

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -24,7 +24,7 @@ header {
   justify-content: space-between;
   padding: 2rem;
   font-size: 1.4rem;
-  background-color: $white;
+  // background-color: $white;
   box-shadow: 0 5px 5px rgba($color: #000000, $alpha: 0.1);
   position: fixed;
   top: 0;
@@ -132,7 +132,7 @@ main {
   .each-country {
     margin-bottom: 4rem;
     box-shadow: 0px 5px 10px 5px rgba($color: #000000, $alpha: 0.05);
-    background-color: $white;
+    // background-color: $white;
     border-radius: 5px;
     overflow: hidden;
     height: 40rem;
@@ -312,16 +312,26 @@ main {
   background-color: $dark-blue;
   color: $white;
 }
-// Testing dark mode
+//////// Testing dark mode
 body {
   // light-mode
   --text-color: hsl(200, 15%, 8%);
   --bkg-color: #fff;
+  header {
+    --h-bkg-color: #fff;
+    --h-text-color: hsl(200, 15%, 8%);
+  }
 }
 body.dark-theme {
   // dark-mode
   --text-color: #eee;
   --bkg-color: hsl(207, 26%, 17%);
+  header {
+    --h-bkg-color: hsl(209, 23%, 22%);
+    --h-text-color: #fff;
+  }
+  input {
+  }
 }
 
 @media (prefers-color-scheme: dark) {
@@ -330,23 +340,28 @@ body.dark-theme {
     // dark-mode
     --text-color: #eee;
     --bkg-color: hsl(207, 26%, 17%);
+    header {
+      --h-bkg-color: hsl(209, 23%, 22%);
+    }
   }
   body.light-theme {
     // light-mode
     --text-color: hsl(200, 15%, 8%);
     --bkg-color: #fff;
+    header {
+      --h-bkg-color: #fff;
+    }
   }
 }
 
-/* * {
-  font-family: Arial, Helvetica, sans-serif;
-} */
-
 body {
   background: var(--bkg-color);
+  header {
+    background: var(--h-bkg-color);
+  }
 }
 
-h1,
-p {
-  color: var(--text-color);
-}
+// h1,
+// p {
+//   color: var(--text-color);
+// }
